# r2pilot

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: cors_wizard.rs  handlers.rs  lifecycle_wizard.rs  main.rs  wizard.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  cloudflare.rs  config.rs  error.rs  lib.rs  presigned.rs
docs/en/: README.md
docs/fr/: README.md
